--- a/style.css
+++ b/style.css
@@ -1,1 +1,32 @@
+p{
+  font-family: Arial;
+  color: slategrey;
+  font-size: 12px;
+}
 
+header footer{
+  background-color: aqua;
+  width: full;
+  text-align: center;
+  padding: 25px 10px 25px 10px;
+  font-family: Arial;
+}
+
+h1{
+  font-size: 30px;
+  color: black;
+}
+
+h2{
+  font-size: 20px;
+  color: black;
+  font-family: inherit;
+}
+
+h2 h3{
+  font-size: 16px;
+}
+
+  
+  
+  
