--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ footer div,{
   font-family: Arial;
 }
 
-header h1{
+header div h1{
   font-size: 30px;
   color: black;
 }
 
-h2{
+main div section h2{
   font-size: 20px;
   color: black;
   font-family: inherit;
