--- a/style.css
+++ b/style.css
@@ -30,7 +30,10 @@ header div h1 nav{
   font-size: 50px;
   font-family: Arial;
 }
-
+footer{
+  background-color: blue;
+}
+  
 footer div{
   text-align: center;
   font-size: 100;
@@ -42,6 +45,11 @@ footer div{
   height: auto;
   border: 3px solid black;
   background-color: lightgrey;
+  padding: 10%;
+}
+
+section div{
+  alignment: center;
 }
   
 
