--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0px;
+}
 .text-center{
   text-align: center;
 }
@@ -36,13 +39,12 @@ footer{
   
 footer div{
   text-align: center;
-  font-size: 100;
+  font-size: 20px;
+  font-style: bold
   color: red;
 }
   
 .section-format{
-  width: auto;
-  height: auto;
   border: 3px solid black;
   background-color: lightgrey;
   padding: 10%;
@@ -50,7 +52,10 @@ footer div{
   margin-left: auto;
 }
 
-
+div{
+  margin: auto;
+  width: 50%;
+}
   
 
   
