--- a/style.css
+++ b/style.css
@@ -22,22 +22,19 @@ body{
   shadow: 2px black;
 }
 /* all text in the paragraph sections*/
- div p{
+ div, p{
   font-family: Arial;
   color: slategrey;
   font-size: 14px;
 }
 
-header div h1 nav{
-  text-align: center;
-  font-size: 50px;
-  font-family: Arial;
-}
 footer{
   background-color: blue;
+  margin: 0px;
+  padding: 10%
 }
   
-footer div{
+footer, div{
   text-align: center;
   font-size: 20px;
   font-style: bold
@@ -47,7 +44,7 @@ footer div{
 .section-format{
   border: 3px solid black;
   background-color: lightgrey;
-  padding: 10%;
+  padding: 2%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -57,7 +54,12 @@ div{
   width: 50%;
 }
   
-
+div, h1{
+  font-size: 40px;
+  font-family: arial;
+  color: black;
+  text-align: center;
+}
   
 
   
