--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ body{
   width: full;
   margin: auto;
 }
-/* background color of header and footer*/
+/* header design is this one */
 .header-main{
   background-color: aqua;
   margin-top: 0;
   padding: 10%;
   text-align: center;
   border-bottom: 5px solid black;
+  word-spacing: 15px;
 }
   
   
