--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
   width: 50%;
   border: 3px solid black;
   shadow: 2px black;
+  margin-top: 5px;
 }
 /* all text in the paragraph sections*/
  div, p{
@@ -38,8 +39,13 @@ body{
 
 footer{
   background-color: blue;
-  margin: 0px;
-  padding: 10%
+  margin: 10px;
+  padding: 10px;
+  shadow-bottom: 1px black;
+  text-align: center;
+  font-style: bold;
+  font-color: black;
+  font-size: 20px;
 }
   
 footer, div{
@@ -55,6 +61,7 @@ footer, div{
   padding: 2%;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
 }
 
 div{
