--- a/style.css
+++ b/style.css
@@ -11,14 +11,16 @@ body{
 }
 /* header design is this one */
 .header-main{
-  background-color: aqua;
-  margin: 10px;
+  background-color: lightgrey;
+  margin: 20px;
   padding: 20px;
   text-align: center;
-  border-bottom: 5px solid black;
-  word-spacing: 10px;
+  border-bottom: 1px solid black;
+  border-radius: 25px;
 }
-  
+  nav{
+    font-size: 24px;
+    f
   
 }
 /* trying to get the image to display in the middle of the page correctly */ 
@@ -29,6 +31,7 @@ body{
   border: 5px solid black;
   shadow: 2px black;
   margin-top: 15px;
+  border-radius: 25px;
 }
 /* all text in the paragraph sections*/
  div, ul, li, p{
@@ -38,7 +41,7 @@ body{
 }
 
 footer{
-  background-color: aqua;
+  background-color: lightgrey;
   margin: 10px;
   padding: 10px;
   shadow-bottom: 1px black;
@@ -49,7 +52,7 @@ footer{
 }
   
 .section-format{
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   background-color: lightblue;
   padding: 25px 30px;
   margin-right: auto;
@@ -75,12 +78,22 @@ h2{
   font-family: arial;
   color: black;
   text-align: center;
+  text-decoration: underline;
 }
 h3{
   font-size: 20px;
 }
-
-  
+/* button for seeing other website*/
+.button{
+  background-color: yellow;
+  border: none;
+  color: black;
+  padding: 15px 30px;
+  font-size: 20px;
+  text-align: center;
+  display: block;
+  margin: 15 auto 15 auto;
+}
 
   
   
