--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body{
 .text-center{
   text-align: center;
 }
-/* not entirely sure what a wrapper even does */
+/* trying the wrapper */
 .wrapper{
-  width: full;
-  margin: auto;
+  max-width: 800px;
+  padding: 10px;
 }
 /* header design is this one */
 .header-main{
@@ -27,7 +27,7 @@ body{
 .img-display{
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 30%;
   border: 5px solid black;
   shadow: 2px black;
   margin-top: 15px;
@@ -40,7 +40,7 @@ body{
   font-size: 18px;
 }
 ul{
-  text-align: left;
+  text-align: inherit;
   list-style-position: inside;
 }
 footer{
@@ -78,23 +78,22 @@ h2{
   font-family: arial;
   color: black;
   text-align: center;
-  text-decoration: underline;
 }
 h3{
   font-size: 20px;
+  text-decoration: underline;
 }
 /* button for seeing other website*/
 .button{
-  background-color: yellow;
+  background-color: #ffff57;
   border: none;
   color: black;
+  text-decoration:bold;
   padding: 5px;
   font-size: 20px;
   text-align: center;
-  display: block-inside;
+  display: inline-block;
   margin: 15 15 15 15;
 }
 
-  
-  
   
