--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body{
   margin: 20px;
   padding: 20px;
   text-align: center;
-  border-bottom: 1px solid black;
   border-radius: 25px;
 }
   nav{
@@ -27,11 +26,12 @@ body{
 .img-display{
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  max-width: 700px;
   border: 5px solid black;
   shadow: 2px black;
   margin-top: 15px;
   border-radius: 25px;
+  position: static;
 }
 /* all text in the paragraph sections*/
  div, ul, li, p{
@@ -39,10 +39,16 @@ body{
   color: black;
   font-size: 18px;
 }
+
 ul{
   text-align: inherit;
   list-style-position: inside;
 }
+
+li{
+  position: static;
+}
+
 footer{
   background-color: lightgrey;
   margin: 20px;
@@ -89,11 +95,13 @@ h3{
   border: none;
   color: black;
   text-decoration:bold;
-  padding: 5px;
+  padding: 10px;
   font-size: 20px;
   text-align: center;
   display: inline-block;
   margin: 15 15 15 15;
+  border-radius: 25px;
+  position: static;
 }
 
   
