--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 .text-center{
   text-align: center;
 }
-/* trying the wrapper */
+/* didnt end up using this, but left it here just in case */
 .wrapper{
   max-width: 800px;
   padding: 10px;
@@ -18,12 +18,10 @@ body{
   text-align: center;
   border-radius: 25px;
 }
-  nav{
-    font-size: 24px;
-    f
+
   
 }
-/* trying to get the image to display in the middle of the page correctly */ 
+/* controls the display of the main home image */ 
 .img-display{
   display: block;
   margin-left: auto;
@@ -43,16 +41,17 @@ body{
   color: black;
   font-size: 18px;
 }
-
+/* used this ul section to get the bullet points and info to line up correctly within the 'section'*/
 ul{
-  text-align: inherit;
+  text-align: left;
   list-style-position: inside;
+  margin-left: 12%;
 }
 
 li{
   position: static;
 }
-
+/* footer design */
 footer{
   background-color: lightgrey;
   margin: 20px;
@@ -64,7 +63,7 @@ footer{
   font-size: 20px;
   border-radius: 25px;
 }
-  
+/* main section container format*/
 .section-format{
   border:none;
   background-color: lightblue;
@@ -115,8 +114,15 @@ h3{
   text-align: left;
   padding-left: 110px;
 }
-  
-a:link    { color: black;  }
-a:visited { color: red;   }
-a:hover   { color: blue; }
+/* this is so the links dont look weird when or after they are clicked */
+a:link    { color: blue;  }
+a:visited { color: blue;   }
+a:hover   { color: red; }
 a:active  { color: yellow;  }
+
+/* I had to make this section to get these words to show up in white on the black background*/
+.words-white{
+  color: white;
+  text-align: center;
+  font-family: arial;
+}
